# s3qlite

./: .gitignore  Cargo.toml  Makefile  build.sh
repl/: .gitignore  Cargo.toml  build.rs  repl_history.txt
repl/src/: main.rs  main_test.rs
src/: env_config.rs  handle.rs  lib.rs  lock_manager.rs
src/sqlite-plugin/: Cargo.toml  README.md  build.rs
src/sqlite-plugin/src/: logger.rs  vfs.rs
